--- a/cv/cdalamagkas-cv.tex
+++ b/cv/cdalamagkas-cv.tex
@@ -19,24 +19,12 @@
 	\vspace*{-0.75cm}
 	%
 	\section{Education}
-
-	\begin{EntryDated}{University of Western Macedonia}{http://icte.uowm.gr}{2019 -- Now}{PhD Candidate, Dept. of Electrical and Computer Engineering}{1.75cm}
-	\begin{Itemize}
-		%\item Recognized as integrated master degree (level 7 of EFQ) under government gazette 3987/14-9-2018
-		%\item Thesis title: "\textit{Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON}".
-		%\item Thesis available online: \url{https://christos.pw/thesis}.
-		\item Optical networks and optimization.
-		\item Research assistant
-	\end{Itemize}
-	\end{EntryDated}
 	
-	\vspace*{0.5cm}
-	
-	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{2012 -- 2017}{Master degree (5 years of study), Dept. of Informatics and Telecomunications Engineering}{-3.25cm}{uowm}{0.6}
+	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{2012 -- 2017}{Master degree (5 years of study), Dept. of Informatics and Telecomunications Engineering}{-1.25cm}{uowm}{0.6}
 		\begin{Itemize}
 			%\item Recognized as integrated master degree (level 7 of EFQ) under government gazette 3987/14-9-2018
 			%\item Thesis title: "\textit{Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON}".
-			\item Game theory on XG-PON networks. Thesis available online: \url{https://christos.pw/thesis}.
+			\item Game theory on XG-PON networks: \url{https://christos.pw/thesis}.
 			\item Graduation Grade: 8.2/10.
 		\end{Itemize}
 	\end{EntryDatedLogo}
@@ -51,7 +39,7 @@
 	
 	\vspace*{0.5cm}
 	
-	\begin{EntryDatedLogo}{IEK ALFA (Vocational school)}{https://iekalfa.gr}{Oct. 2018 - Now}{Teacher}{-1cm}{alfa}{0.6}
+	\begin{EntryDatedLogo}{IEK ALFA (Vocational school)}{https://iekalfa.gr}{Oct. 2018 - Jun. 2019}{Teacher}{-1cm}{alfa}{0.6}
 		\begin{Itemize}
 			\item Computer networks and telecommunications oriented lessons.
 			\item Operating Systems and Object-oriented programming (C++).
@@ -70,7 +58,7 @@
 
 	\vspace*{0.5cm}	
 
-	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{Mar. 2017 - Now}{Teaching Assistant}{-1cm}{uowm}{0.6}
+	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{Mar. 2017 - Nov. 2019}{Teaching Assistant}{-1cm}{uowm}{0.6}
 	\begin{Itemize}
 		\item Computer Networks II, Computer and Network Security.
 		\item Event-driven simulation.
@@ -90,7 +78,7 @@
 	\section{Skills}
 	\begin{tabular}{m{4.5cm} m{13cm}}\renewcommand{\arraystretch}{2}
 		\textbf{Telecommunications}   	& ITU-T PONs, Traffic Engineering, Simulation (OmNET++). \\
-		\textbf{Networking}   			& TCP/IP, OpenVSwitch, Cisco IOS, RouterOS, ArubaOS, Routing and Switching.\\
+		\textbf{Networking}   			& CCNA Curriculum, Open vSwitch, RouterOS, ArubaOS, OpenFlow, Ryu SDN controller.\\
 		\textbf{Security}				& TLS, PKI, OpenVPN, pfSense, ACLs. \\
 		\textbf{System Administration}	& Unix, LEMP stack, Windows Server, Active Directory. \\
 		\textbf{Virtualization}			& Xen (XCP-ng), ESXi, Proxmox, VMware/Virtualbox, Docker.\\ 
@@ -99,11 +87,14 @@
 		\textbf{Languages} 				& Greek (native), English (C2), German (C1). 
 	\end{tabular}
 	
-	\section{Selected Publications}
+	\section{Publications}
 	\pubentry{1}{C. Dalamagkas, P. Sarigiannidis, S. Kapetanakis and I. Moscholios, "Dynamic scheduling in {TWDM}-{PONs} using game theory", \textit{Optical Switching and Networking}, Dec. 2017, DOI: \href{https://doi.org/10.1016/j.osn.2017.12.004}{\texttt{10.1016/j.osn.2017.12.004}}.}{2018}
 	
 	\pubentry{2}{C. Dalamagkas, P. Sarigiannidis, I. Moscholios, T. Lagkas and M.S. Obaidat, "PAS: A Fair Game-Driven DBA Scheme for XG-PON Systems", \textit{11th International Symposium on Communication Systems, Networks, and Digital Signal Processing}, Jul. 2018. DOI: 
 	\href{https://doi.org/10.1109/CSNDSP.2018.8471787}{\texttt{10.1109/CSNDSP.2018.8471787}}}{2018}
+	
+	\pubentry{3}{C. Dalamagkas et al., “A Survey On Honeypots, Honeynets And Their Applications On Smart Grid,” in 2019 IEEE Conference on Network Softwarization (NetSoft), 2019. DOI: 
+	\href{http://dx.doi.org/10.1109/NETSOFT.2019.8806693}{\texttt{10.1109/NETSOFT.2019.8806693}}}{2019}
 	
 	\vspace{-0.25cm}
 	\section{Professional Certifications}
