--- a/cv/cdalamagkas-cv-gr.tex
+++ b/cv/cdalamagkas-cv-gr.tex
@@ -1,5 +1,5 @@
 %!TEX TS-program = xelatex
-\documentclass{mycv}
+\documentclass{mycv-gr}
 
 \begin{document}
 	\thispagestyle{plain}
@@ -12,27 +12,15 @@
 	\end{minipage}
 	\begin{minipage}{.3\textwidth}
 		\begin{flushright}
-			\includegraphics[scale=0.2]{photo.jpg}
+			\includegraphics[scale=0.2]{assets/photo.jpg}
 		\end{flushright}
 	\end{minipage}
 	%
 	\vspace*{-0.75cm}
 	%
 	\section{Εκπαιδευση}
-
-	\begin{EntryDated}{Πανεπιστήμιο Δυτικής Μακεδονίας}{http://ece.uowm.gr}{2019 -- Τώρα}{Υποψηφιος Διδακτορας, Τμημα Ηλεκτρολογων Μηχανικων και Μηχανικων Υπολογιστων}{1.75cm}
-	\begin{Itemize}
-		%\item Recognized as integrated master degree (level 7 of EFQ) under government gazette 3987/14-9-2018
-		%\item Thesis title: "\textit{Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON}".
-		%\item Thesis available online: \url{https://christos.pw/thesis}.
-		\item Οπτικά Δίκτυα και Βελτιστοποίηση.
-		\item Βοηθός έρευνας (πρόγραμμα SPEAR)
-	\end{Itemize}
-	\end{EntryDated}
 	
-	\vspace*{0.5cm}
-	
-	\begin{EntryDatedLogo}{Πανεπιστήμιο Δυτικής Μακεδονίας}{http://ece.uowm.gr}{2012 -- 2017}{Διπλωμα (Πενταετους φοιτησης), Πρ. Τμημα Μηχανικων Πληροφορικης και Τηλεπικοινωνιων}{-3.25cm}{uowm}{0.6}
+	\begin{EntryDatedLogo}{Πανεπιστήμιο Δυτικής Μακεδονίας}{http://ece.uowm.gr}{2012 -- 2017}{Διπλωμα (Πενταετους φοιτησης), Πρ. Τμημα Μηχανικων Πληροφορικης και Τηλεπικοινωνιων}{-1.25cm}{uowm}{0.6}
 		\begin{Itemize}
 			%\item Recognized as integrated master degree (level 7 of EFQ) under government gazette 3987/14-9-2018
 			%\item Thesis title: "\textit{Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON}".
@@ -51,7 +39,7 @@
 	
 	\vspace*{0.5cm}
 	
-	\begin{EntryDatedLogo}{ΙΙΕΚ ΑΛΦΑ}{https://iekalfa.gr}{Οκτ. 2018 - Τώρα}{Δασκαλος}{-1cm}{alfa}{0.6}
+	\begin{EntryDatedLogo}{ΙΙΕΚ ΑΛΦΑ}{https://iekalfa.gr}{Οκτ. 2018 - Ιουν. 2019}{Δασκαλος}{-1cm}{alfa}{0.6}
 		\begin{Itemize}
 			\item Δίκτυα υπολογιστών και τηλεπικοινωνίες.
 			\item Λειτουργικά Συστήματα και Αντικειμενοστραφής Προγραμματισμός (C++).
@@ -70,7 +58,7 @@
 
 	\vspace*{0.5cm}	
 
-	\begin{EntryDatedLogo}{Πανεπιστήμιο Δυτικής Μακεδονίας}{http://icte.uowm.gr}{Μάρ. 2017 - Τώρα}{Βοηθος εργαστηριων}{-1cm}{uowm}{0.6}
+	\begin{EntryDatedLogo}{Πανεπιστήμιο Δυτικής Μακεδονίας}{http://icte.uowm.gr}{Μάρ. 2017 - Νοε. 2019}{Βοηθος εργαστηριων}{-1cm}{uowm}{0.6}
 	\begin{Itemize}
 		\item Δίκτυα Υπολογιστών, Ασφάλεια Υπολογιστών και Δικτύων.
 		\item Γεγονοστραφής προσομοίωση.
@@ -90,24 +78,28 @@
 	\section{Δεξιοτητες}
 	\begin{tabular}{m{4.5cm} m{13cm}}\renewcommand{\arraystretch}{2}
 		\textbf{Τηλεπικοινωνίες}   		& ITU-T PONs, Traffic Engineering, Simulation (OmNET++). \\
-		\textbf{Δικτύωση}   			& TCP/IP, OpenVSwitch, Cisco IOS, RouterOS, ArubaOS, Routing and Switching.\\
+		\textbf{Δικτύωση}   			& Ύλη του CCNA, Open vSwitch, RouterOS, ArubaOS, OpenFlow.\\
 		\textbf{Ασφάλεια}				& TLS, PKI, OpenVPN, pfSense, ACLs. \\
 		\textbf{Διαχείριση Συστημάτων}	& Unix, LEMP stack, Windows Server, Active Directory. \\
-		\textbf{Εικονικοποίηση}			& Xen (XCP-ng), ESXi, Proxmox, VMware/Virtualbox, Docker.\\ 
+		\textbf{Εικονικοποίηση}			& Xen (XCP-ng), ESXi, Proxmox VE, VMware/Virtualbox, Docker.\\ 
 		\textbf{Προγραμματισμός} 	    & Java, MATLAB, Python, C/C++, Basics of web development. \\
 		\textbf{Διάφορα}				& Troubleshooting, Project Management, Office Suite, MS Visio, \LaTeX. \\
 		\textbf{Γλώσσες} 				& Greek (native), English (C2), German (C1). 
 	\end{tabular}
 	
-	\section{Επιλεγμενες Δημοσιευσεις}
+	\section{Δημοσιευσεις}
 	\pubentry{1}{C. Dalamagkas, P. Sarigiannidis, S. Kapetanakis and I. Moscholios, "Dynamic scheduling in {TWDM}-{PONs} using game theory", \textit{Optical Switching and Networking}, Dec. 2017, DOI: \href{https://doi.org/10.1016/j.osn.2017.12.004}{\texttt{10.1016/j.osn.2017.12.004}}.}{2018}
 	
 	\pubentry{2}{C. Dalamagkas, P. Sarigiannidis, I. Moscholios, T. Lagkas and M.S. Obaidat, "PAS: A Fair Game-Driven DBA Scheme for XG-PON Systems", \textit{11th International Symposium on Communication Systems, Networks, and Digital Signal Processing}, Jul. 2018. DOI: 
 	\href{https://doi.org/10.1109/CSNDSP.2018.8471787}{\texttt{10.1109/CSNDSP.2018.8471787}}}{2018}
 	
+	\pubentry{3}{C. Dalamagkas et al., “A Survey On Honeypots, Honeynets And Their Applications On Smart Grid,” in 2019 IEEE Conference on Network Softwarization (NetSoft), 2019. DOI: 
+	\href{http://dx.doi.org/10.1109/NETSOFT.2019.8806693}{\texttt{10.1109/NETSOFT.2019.8806693}}}{2019}
+	
+	
 	\vspace{-0.25cm}
 	\section{Επαγγελματικες Πιστοποιησεις}
-	\begin{EntryDatedLogo}{Cisco Certified Network Associate (CCNA)}{https://www.cisco.com/}{\scshape{Ιουλ. 2019}}{}{-0.75cm}{cisco}{0.6}
+	\begin{EntryDatedLogo}{Cisco Certified Network Associate (CCNA)}{https://www.cisco.com/}{\scshape{Ιουλ. 2019}}{Σε ισχυ}{-0.75cm}{cisco}{0.6}
 	\end{EntryDatedLogo}
 	\vspace{0.25cm}
 	
