--- a/cv/cdalamagkas-cv.tex
+++ b/cv/cdalamagkas-cv.tex
@@ -5,7 +5,7 @@
 	\thispagestyle{plain}
 	\begin{minipage}{.7\textwidth}
 		\begin{flushleft}
-			\name{Christos Dalamagkas}{Research Assistant}{Network Engineer}
+			\name{Christos Dalamagkas}{Research Assistant}{Network Engineer (CCNA)}
 			\contact{(+30) 698 316 0295}{cdalamagkas@gmail.com}{chris.dal}{https://christos.pw}{linkedin.com/in/cdalamagkas}{cdalamagkas}
 			\birth
 		\end{flushleft}
@@ -20,7 +20,7 @@
 	%
 	\section{Education}
 	
-	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{2012 -- 2017}{Master degree (5 years of study), Dept. of Informatics and Telecomunications Engineering}{-1.25cm}{uowm}{0.6}
+	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{2012 -- 2017}{Master degree (5 years of study), Dept. of Informatics and Telecommunications Engineering}{-1.25cm}{uowm}{0.6}
 		\begin{Itemize}
 			%\item Recognized as integrated master degree (level 7 of EFQ) under government gazette 3987/14-9-2018
 			%\item Thesis title: "\textit{Design of Market Mechanism for Dynamic Bandwidth Allocation on XG-PON}".
@@ -39,6 +39,25 @@
 	
 	\vspace*{0.5cm}
 	
+	\begin{EntryDatedLogo}{Freelance ICT engineer}{https://christos.pw}{Jun. 2018 - Now}{L1 Engineer}{-1cm}{engineer}{0.6}
+		\begin{Itemize}
+			\item VAT registered CCNA Network Engineer.
+			\item Field Engineer for IT service companies (NSC Global)
+		\end{Itemize}
+	\end{EntryDatedLogo}
+
+	\vspace*{0.5cm}	
+
+	\begin{EntryDatedLogo}{University of Western Macedonia}{https://ece.uowm.gr}{Mar. 2017 - Now}{Research Assistant}{-1cm}{uowm}{0.6}
+		\begin{Itemize}
+			\item Teaching Assistance for Computer Networks, Cybersecurity and Event-driven simulation.
+			\item Assistance in EU-funded research programmes.
+			\item Developer (Web development and SDN). 
+		\end{Itemize}
+	\end{EntryDatedLogo}
+
+	\vspace*{0.5cm}
+
 	\begin{EntryDatedLogo}{IEK ALFA (Vocational school)}{https://iekalfa.gr}{Oct. 2018 - Jun. 2019}{Teacher}{-1cm}{alfa}{0.6}
 		\begin{Itemize}
 			\item Computer networks and telecommunications oriented lessons.
@@ -56,15 +75,6 @@
 %	\end{Itemize}
 	\end{EntryDatedLogo}
 
-	\vspace*{0.5cm}	
-
-	\begin{EntryDatedLogo}{University of Western Macedonia}{http://icte.uowm.gr}{Mar. 2017 - Nov. 2019}{Teaching Assistant}{-1cm}{uowm}{0.6}
-	\begin{Itemize}
-		\item Computer Networks II, Computer and Network Security.
-		\item Event-driven simulation.
-	\end{Itemize}
-	\end{EntryDatedLogo}
-
 	\vspace*{0.75cm}	
 
 	\begin{EntryDatedLogo}{IntelliSolutions S.A}{http://intelli-corp.com}{Jul. - Aug. 2016}{Systems and Network Engineer (Intern)}{-0.4cm}{intelli}{0.75}
@@ -75,17 +85,38 @@
 	%\end{Itemize}
 	\end{EntryDatedLogo}
 	\newpage
+	
+	\section{Professional Certifications}
+	\begin{EntryDatedLogo}{Cisco Certified Network Associate (CCNA)}{https://www.cisco.com/}{\scshape{Jul. 2019}}{Valid}{-0.75cm}{cisco}{0.6}
+	\end{EntryDatedLogo}
+	
 	\section{Skills}
 	\begin{tabular}{m{4.5cm} m{13cm}}\renewcommand{\arraystretch}{2}
 		\textbf{Telecommunications}   	& ITU-T PONs, Traffic Engineering, Simulation (OmNET++). \\
-		\textbf{Networking}   			& CCNA Curriculum, Open vSwitch, RouterOS, ArubaOS, OpenFlow, Ryu SDN controller.\\
-		\textbf{Security}				& TLS, PKI, OpenVPN, pfSense, ACLs. \\
+		\textbf{Networking}   			& CCNA skills, Open vSwitch, RouterOS, ArubaOS, OpenFlow, SDN programming.\\
+		\textbf{Security}				& TLS, PKI, OpenVPN, pfSense, ACLs and Firewalls \\
 		\textbf{System Administration}	& Unix, LEMP stack, Windows Server, Active Directory. \\
-		\textbf{Virtualization}			& Xen (XCP-ng), ESXi, Proxmox, VMware/Virtualbox, Docker.\\ 
-		\textbf{Programming} 	    	& Java, MATLAB, Python, C/C++, Basics of web development. \\
+		\textbf{Virtualization}			& Xen (XCP-ng), ESXi, Proxmox VE, VMware/VirtualBox, Docker.\\ 
+		\textbf{Programming} 	    	& Java, MATLAB, Python, C/C++, Web development, Django framework. \\
 		\textbf{Miscellaneous}			& Troubleshooting, Project Management, Office Suite, MS Visio, \LaTeX. \\
 		\textbf{Languages} 				& Greek (native), English (C2), German (C1). 
 	\end{tabular}
+
+	\section{Voluntary Activities and Memberships}
+	\vspace*{0.125cm}	
+	\begin{EntryDatedLogo}{University of Western Macedonia}{https://uowm.gr}{Mar. 2016 - Now}{Author of educational material}{-1.1cm}{uowm}{0.6}
+		\begin{Itemize}
+			\item Author of original education material for the course "Network Design".
+			\item Curriculum includes Cisco and Mikrotik routing and switching.
+		\end{Itemize}
+	\end{EntryDatedLogo}
+
+	\vspace*{0.5cm}
+
+	\begin{EntryDatedLogo}{Institute of Electrical and Electronics Engineers}{https://www.ieee.org/}{Sep. 2013 -- Now}{IEEE Communications Society member}{-0.5cm}{ieee}{0.6}
+	\end{EntryDatedLogo}
+	
+	\vspace*{0.5cm}
 	
 	\section{Publications}
 	\pubentry{1}{C. Dalamagkas, P. Sarigiannidis, S. Kapetanakis and I. Moscholios, "Dynamic scheduling in {TWDM}-{PONs} using game theory", \textit{Optical Switching and Networking}, Dec. 2017, DOI: \href{https://doi.org/10.1016/j.osn.2017.12.004}{\texttt{10.1016/j.osn.2017.12.004}}.}{2018}
@@ -95,25 +126,7 @@
 	
 	\pubentry{3}{C. Dalamagkas et al., “A Survey On Honeypots, Honeynets And Their Applications On Smart Grid,” in 2019 IEEE Conference on Network Softwarization (NetSoft), 2019. DOI: 
 	\href{http://dx.doi.org/10.1109/NETSOFT.2019.8806693}{\texttt{10.1109/NETSOFT.2019.8806693}}}{2019}
-	
-	\vspace{-0.25cm}
-	\section{Professional Certifications}
-	\begin{EntryDatedLogo}{Cisco Certified Network Associate (CCNA)}{https://www.cisco.com/}{\scshape{Jul. 2019}}{}{-0.75cm}{cisco}{0.6}
-	\end{EntryDatedLogo}
-	\vspace{0.25cm}
-	
-	\section{Voluntary Activities and Memberships}
-	\vspace*{0.125cm}	
-	\begin{EntryDatedLogo}{University of Western Macedonia}{https://uowm.gr}{Mar. 2016 - Now}{Editor of educational material}{-1.1cm}{uowm}{0.6}
-	\begin{Itemize}
-		\item Author of original education material for the course "Network Design".
-		\item Curriculum includes Cisco and Mikrotik routing and switching.
-	\end{Itemize}
-	\end{EntryDatedLogo}
 
-	\vspace*{0.5cm}
-	
-	\begin{EntryDatedLogo}{Institute of Electrical and Electronics Engineers}{https://www.ieee.org/}{Sep. 2013 -- Now}{IEEE Communications Society member}{-0.5cm}{ieee}{0.6}
-	\end{EntryDatedLogo}
+	\pubentry{4}{P. Diamantoulakis, C. Dalamagkas, P. Radoglou-Grammatikis, P. Sarigiannidis, and G. Karagiannidis, “Game Theoretic Honeypot Deployment in Smart Grid,” Sensors, vol. 20, no. 15, p. 4199, Jul. 2020. DOI: \href{http://dx.doi.org/10.3390/s20154199}{\texttt{10.3390/s20154199}}}{2020}
 
 \end{document}
